# CMGT-Fighting-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
CMakeModules/: FindFLAC.cmake
cmake/: FindSFML.cmake
src/: main.cpp
src/Components/AnimatedSprite/: AnimatedSprite.cpp  AnimatedSprite.hpp
src/Components/ButtonSprite/: ButtonSprite.cpp  ButtonSprite.hpp
src/Components/DragSprite/: DragSprite.cpp  DragSprite.hpp  DragSpriteManager.cpp  DragSpriteManager.hpp
src/Components/FileWriter/: FileWriter.cpp  FileWriter.hpp
src/Components/FillShape/: FillShape.cpp  FillShape.hpp
src/Components/Music/: Music.cpp  Music.hpp
src/Components/Origin/: Origin.hpp
src/Components/RandomGenerator/: RandomGenerator.cpp  RandomGenerator.hpp
src/Components/RectSprite/: RectSprite.cpp  RectSprite.hpp
src/Components/Rectangle/: Rectangle.cpp  Rectangle.hpp
src/Components/SceneManager/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/Components/Sound/: Sound.cpp  Sound.hpp
src/Components/StateSprite/: StateSprite.cpp  StateSprite.hpp
src/Components/Text/: Text.cpp  Text.hpp
src/Components/TextBubbleShape/: TextBubbleShape.cpp  TextBubbleShape.hpp
src/Components/Window/: RenderWindow.cpp  RenderWindow.hpp
src/Engine/: Ability.cpp  Ability.hpp  AbilityList.cpp  AbilityList.hpp  ActionLog.cpp  ActionLog.hpp  Entity.cpp  Entity.hpp  HealthBar.cpp  HealthBar.hpp  Hud.cpp  Hud.hpp  Team.cpp  Team.hpp
src/Front/Game/: Game.cpp  Game.hpp
src/Front/Scene/: GameScene.cpp  GameScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp
